--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ rust-version = "1.56"
 [dependencies]
 hmac = "0.12.1"
 sha2 = "0.10"
-time = { version = "0.3", default-features = false, features = ["macros", "formatting"] }
+time = { version = "0.4.19", package = "chrono" }
 url = "2.2.0"
 percent-encoding = "2.1.0"
 zeroize = "1"
@@ -28,7 +28,7 @@ serde_json = { version = "1", optional = true }
 
 [features]
 default = ["full"]
-full = ["base64", "quick-xml", "md-5", "serde", "serde_json", "time/parsing"]
+full = ["base64", "quick-xml", "md-5", "serde", "serde_json"]
 
 [dev-dependencies]
 tokio = { version = "1.0.1", features = ["macros", "fs", "rt-multi-thread"] }
